replace from 'new Long' to 'Long.valueOf'